--- a/drivers/misc/mediatek/flashlight/Kconfig
+++ b/drivers/misc/mediatek/flashlight/Kconfig
@@ -141,6 +141,18 @@ config MTK_FLASHLIGHT_SYWT78
 
 	  Say M here if you want to compile this driver as a module.
 
+config MTK_FLASHLIGHT_SGM3785
+	tristate "Mediatek flashlight with driver IC (SGM3785)"
+	depends on MTK_FLASHLIGHT && RT_FLASHLIGHT
+	default n
+	help
+	  This is for the flashlight driver IC (SGM3785).
+
+	  Say Y here if you want a flashlight driver IC SGM3785.
+	  Select this only if your board has this IC.
+
+	  Say M here if you want to compile this driver as a module.
+
 config MTK_FLASHLIGHT_DUMMY
 	tristate "Mediatek flashlight dummy driver"
 	depends on MTK_FLASHLIGHT
