--- a/drivers/misc/mediatek/lcm/Kconfig
+++ b/drivers/misc/mediatek/lcm/Kconfig
@@ -23,3 +23,15 @@ config MTK_LCM_DEVICE_TREE_SUPPORT
 	  Please also turn on MTK_LCM_DEVICE_TREE_SUPPORT in ProjectConfig.mk.
 	  If not define MTK_LCM_DEVICE_TREE_SUPPORT
 	  there will not connect between display driver and LCM devices.
+
+config HQ_SET_LCD_BIAS
+	bool CONFIG_HQ_SET_LCD_BIAS
+	default n
+	help
+	  HQ SET LCD BIAS driver
+
+config HQ_EXT_LCD_BIAS
+	bool CONFIG_HQ_EXT_LCD_BIAS
+	default n
+	help
+	  HQ EXT LCD BIAS driver
