drivers: power: supply: Import bq24157 charger driver
* From https://github.com/tibms/mtk-ref/tree/master/kernel/bq24157

Change-Id: I4ca6a7519db18a90f44b0ea0686a0ff821504f83
Signed-off-by: bengris32 <bengris32@protonmail.ch>

--- a/drivers/power/supply/Makefile
+++ b/drivers/power/supply/Makefile
@@ -28,6 +28,7 @@ subdir-ccflags-y += -I$(srctree)/drivers/misc/mediatek/typec/tcpc/inc
 subdir-ccflags-y += -I$(srctree)/drivers/misc/mediatek/power_throttling
 
 obj-$(CONFIG_CHARGER_CROS_USBPD)	+= cros_usbpd-charger.o
+obj-$(CONFIG_BQ24157_CHARGER_SUPPORT) += bq24157_charger.o
 obj-$(CONFIG_CHARGER_BQ25601) += bq25601.o
 obj-$(CONFIG_CHARGER_RT9458) += rt9458.o
 obj-$(CONFIG_CHARGER_RT9465) += rt9465.o
