--- a/drivers/power/supply/Kconfig
+++ b/drivers/power/supply/Kconfig
@@ -543,6 +543,12 @@ config CHARGER_BQ2415X
 	  You'll need this driver to charge batteries on e.g. Nokia
 	  RX-51/N900.
 
+config BQ24157_CHARGER_SUPPORT
+	tristate "TI BQ24157 battery charger driver"
+	depends on I2C
+	help
+	  Say Y to enable support for the TI BQ24157 battery charger.
+
 config CHARGER_BQ24190
 	tristate "TI BQ24190 battery charger driver"
 	depends on I2C
