--- a/arch/arm64/configs/wasp_defconfig
+++ b/arch/arm64/configs/wasp_defconfig
@@ -39,6 +39,8 @@ CONFIG_NR_CPUS=32
 CONFIG_PARAVIRT=y
 CONFIG_RANDOMIZE_BASE=y
 # CONFIG_DMI is not set
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES="mediatek/mt6761"
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
