--- a/arch/arm64/boot/dts/mediatek/mt6761.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6761.dts
@@ -3537,10 +3537,7 @@ mipi_rx_ana_csi0b: mipi_rx_ana_csi0b@11c11000 {
 
 };
 
-#include "mediatek/cust_mt6761_msdc.dtsi"
 #include "mediatek/mt6357.dtsi"
-#include "mediatek/bat_setting/mt6761_battery_prop.dtsi"
 #include "mediatek/mt6370.dtsi"
 #include "mediatek/mt6370_pd.dtsi"
-
-
+#include "mediatek/mt6761-wasp.dtsi"
