drivers: input: touchscreen: Import gt9xx_mtk driver
* From https://github.com/goodix-tp/GT9XX_Driver_for_MTK.

Change-Id: Ib8aeda2d6732d303167d732b918c9803bfc9dd2a
Signed-off-by: bengris32 <bengris32@protonmail.ch>

--- a/drivers/input/touchscreen/mediatek/Kconfig
+++ b/drivers/input/touchscreen/mediatek/Kconfig
@@ -103,6 +103,19 @@ config TOUCHSCREEN_MTK_GT9XX_LM
 
 source "drivers/input/touchscreen/mediatek/GT9XX_LM/Kconfig"
 
+config TOUCHSCREEN_MTK_GT9XX
+        bool "GT9XX for Mediatek package"
+        default n
+        help
+          Say Y here if you have GT9XX touch panel.
+
+          If unsure, say N.
+
+          To compile this dirver as a module, choose M here: the
+          module will be called.
+
+source "drivers/input/touchscreen/mediatek/gt9xx_mtk/Kconfig"
+
 config TOUCHSCREEN_FT5X26
 	bool "FT5X26 for Mediatek package"
 	help
