--- a/arch/arm64/configs/wasp_defconfig
+++ b/arch/arm64/configs/wasp_defconfig
@@ -230,6 +230,11 @@ CONFIG_KEYBOARD_MTK_PMIC=y
 CONFIG_KEYBOARD_MTK=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
+CONFIG_TOUCHSCREEN_MTK=y
+CONFIG_TOUCHSCREEN_MTK_GT9XX=y
+# CONFIG_GTP_AUTO_UPDATE is not set
+# CONFIG_GTP_HEADER_FW_UPDATE is not set
+# CONFIG_GTP_ESD_PROTECT is not set
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
 # CONFIG_VT is not set
