sound: mediatek: Reverse engineer HQ extamp changes
Change-Id: Ia8a2e172c0e2a2f3122ece4780cc29a6d2211857
Signed-off-by: bengris32 <bengris32@protonmail.ch>

--- a/sound/soc/mediatek/Kconfig
+++ b/sound/soc/mediatek/Kconfig
@@ -443,3 +443,9 @@ config MTK_ULTRASND_PROXIMITY
 	  emulate physical proximity sensor. Using
 	  IPI interface to communicate with SCP side and
 	  be controlled by sensor hal.
+
+config HQ_AUDIO_GPIO_EXTAMP_PA
+	bool "HQ AUDIO GPIO EXTAMP PA"
+	help
+	  Say Y here to enable GPIO control for the external amplifier.
+	  If unsure select "N".
