--- a/arch/arm64/configs/wasp_defconfig
+++ b/arch/arm64/configs/wasp_defconfig
@@ -300,6 +300,7 @@ CONFIG_SND_SOC=y
 CONFIG_MTK_SND_SOC_CODEC="mt6357"
 CONFIG_SND_SOC_MTK_BTCVSD=y
 CONFIG_MTK_SND_SOC_NEW_ARCH=y
+CONFIG_HQ_AUDIO_GPIO_EXTAMP_PA=y
 CONFIG_SND_SOC_RT5509=y
 CONFIG_HIDRAW=y
 CONFIG_HID_APPLE=y
