--- a/arch/arm64/boot/dts/mediatek/mt6761.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6761.dts
@@ -377,9 +377,9 @@ firmware_class.path=/vendor/firmware";
 		#clock-cells = <1>;
 	};
 
-	mcdi@00110100 {
+	mcdi@0010fc00 {
 		compatible = "mediatek,mt6761-mcdi";
-		reg = <0 0x00110100 0 0x800>;
+		reg = <0 0x0010fc00 0 0x800>;
 	};
 
 	scpsys: scpsys@10001000 {
@@ -850,9 +850,9 @@ firmware_class.path=/vendor/firmware";
 			compatible = "mediatek,mt6761-dvfsrc-met";
 		};
 
-		qos@00110b80 {
+		qos@00110780 {
 			compatible = "mediatek,mt6761-qos";
-			reg = <0 0x00110b80 0 0x80>;
+			reg = <0 0x00110780 0 0x80>;
 		};
 	};
 
@@ -1297,10 +1297,10 @@ firmware_class.path=/vendor/firmware";
 		reg = <0 0x10227000 0 0x1000>;
 	};
 
-	dvfsp@00110c00 {
+	dvfsp@00110800 {
 		compatible = "mediatek,mt6761-dvfsp";
-		reg = <0 0x00110c00 0 0x1400>,
-		      <0 0x00110c00 0 0x1400>;
+		reg = <0 0x00110800 0 0x1400>,
+		      <0 0x00110800 0 0x1400>;
 		nvmem-cells = <&efuse_segment>;
 		nvmem-cell-names = "efuse_segment_cell";
 	};
