--- a/arch/arm64/configs/wasp_defconfig
+++ b/arch/arm64/configs/wasp_defconfig
@@ -396,6 +396,7 @@ CONFIG_F2FS_FS_ENCRYPTION=y
 CONFIG_FS_ENCRYPTION_INLINE_CRYPT=y
 # CONFIG_DNOTIFY is not set
 CONFIG_OVERLAY_FS=y
+CONFIG_INCREMENTAL_FS=y
 CONFIG_MSDOS_FS=y
 CONFIG_VFAT_FS=y
 CONFIG_EXFAT_FS=y
@@ -459,7 +460,6 @@ CONFIG_NLS_UTF8=y
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_STATIC_USERMODEHELPER_PATH="/system_ext/bin/aee_core_forwarder"
 CONFIG_CRYPTO_ADIANTUM=y
-CONFIG_CRYPTO_ZSTD=y
 CONFIG_CRYPTO_ANSI_CPRNG=y
 CONFIG_CRYPTO_DEV_VIRTIO=y
 CONFIG_CRC_CCITT=y
