--- a/arch/arm64/configs/wasp_defconfig
+++ b/arch/arm64/configs/wasp_defconfig
@@ -58,6 +58,7 @@ CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_KPROBES=y
 CONFIG_BLK_INLINE_ENCRYPTION=y
 CONFIG_BLK_INLINE_ENCRYPTION_FALLBACK=y
+CONFIG_CFQ_GROUP_IOSCHED=y
 CONFIG_GKI_HACKS_TO_FIX=y
 # CONFIG_CORE_DUMP_DEFAULT_ELF_HEADERS is not set
 CONFIG_CMA_AREAS=16
